--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.24",
     "next": "^15.5.2",
     "next-auth": "^4.24.11",
     "prisma": "^6.15.0",
